--- a/week1/index.html
+++ b/week1/index.html
@@ -23,5 +23,5 @@
 	<textarea id="story_editor" placeholder="Write a totally awesome story here."></textarea>
 	<section id="story_display"></section>
 </body>
-<script src='main.js'></script>
+<script src='./js/main.js'></script>
 </html>
