--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8">
   <title>WDD330 Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./style/main.css" type="text/css">
 </head>
 <body>
-  <h1>Projects</h1>
-  <ol id='main'>
-  </ol>
+  <main>
+    <h1>Projects</h1>
+    <ol id='main'>
+    </ol>
+  </main>
 </body>
 <script src="./js/main.js"></script>
 </html>
